[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/Main_menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Press Start 2P Font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://stylings/newButtons_blueSeeGree/ButtonFocus.tres" type="StyleBox" id=3]
[ext_resource path="res://stylings/newButtons_blueSeeGree/ButtonPressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Peach Days.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://stylings/newButtons_blueSeeGree/ButtonNormal.tres" type="StyleBox" id=6]
[ext_resource path="res://imgs/Untitled175_20221111173512.png" type="Texture" id=7]
[ext_resource path="res://scenes/Main_menu/gear_handler.gd" type="Script" id=8]
[ext_resource path="res://imgs/icons/github-logo-6532.png" type="Texture" id=9]
[ext_resource path="res://imgs/icons/youtube-logo-2431.png" type="Texture" id=10]
[ext_resource path="res://imgs/icons/itch io 64.png" type="Texture" id=11]
[ext_resource path="res://imgs/Untitled176_20221118180223.png" type="Texture" id=12]

[sub_resource type="CanvasItemMaterial" id=27]

[sub_resource type="Shader" id=37]
code = "shader_type canvas_item; 
render_mode unshaded; 

uniform float width : hint_range(0.0, 16.0); 
uniform vec4 outline_color : hint_color;

uniform sampler2D textureName;
uniform vec2 textureName_size;

void fragment() 
{ 
	//vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0)); 
	vec2 size = vec2(width) / vec2(textureName_size); 
	
	vec4 sprite_color = texture(TEXTURE, UV); 
	
	float alpha = sprite_color.a; 
	alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(size.x, -size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a; 
	alpha += texture(TEXTURE, UV + vec2(size.x, size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(-size.x, size.y)).a; 
	alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a; 
	alpha += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a; 
	
	vec3 final_color = mix(outline_color.rgb, sprite_color.rgb, sprite_color.a); 
	COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0)); 
}"

[sub_resource type="ShaderMaterial" id=30]
shader = SubResource( 37 )
shader_param/width = 4.67
shader_param/outline_color = Color( 0, 0, 0, 1 )
shader_param/textureName_size = Vector2( 600, 600 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 2

[sub_resource type="Gradient" id=35]
colors = PoolColorArray( 0.230902, 0.395894, 0.489151, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 35 )
width = 214
height = 144
fill_from = Vector2( 0, 1 )
fill_to = Vector2( 0, 0 )

[sub_resource type="DynamicFont" id=36]
size = 32
outline_size = 3
outline_color = Color( 0.0436314, 0.246595, 0.361313, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=25]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=23]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=31]
font_path = "res://fonts/Press Start 2P Font.ttf"

[sub_resource type="DynamicFont" id=32]
size = 96
outline_size = 20
outline_color = Color( 0.0351199, 0.115072, 0.348308, 1 )
font_data = SubResource( 31 )

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 96 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "title_typing"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 2, 2.6, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 0.679, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 86, 106, 86, 106, 86, 106, 86, 106 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource( 27 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.379564, 0.668923, 0.824799, 1 )

[node name="gear_handler" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 150, 170 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 115.5, 604.5 )
scale = Vector2( 0.541667, 0.541667 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 101.875, 903.125 )
scale = Vector2( 0.319583, 0.319583 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 340.75, 742.75 )
scale = Vector2( 0.269167, 0.269167 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 638, 1159 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 12 )

[node name="Sprite5" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 676.75, 918.75 )
scale = Vector2( 0.269167, 0.269167 )
texture = ExtResource( 7 )

[node name="Sprite6" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 533.125, 993.875 )
scale = Vector2( 0.199583, 0.199583 )
texture = ExtResource( 12 )

[node name="Sprite7" type="Sprite" parent="gear_handler"]
modulate = Color( 0, 0, 0, 0.411765 )
show_behind_parent = true
material = SubResource( 30 )
position = Vector2( 200, 1094 )
scale = Vector2( 0.199583, 0.199583 )
texture = ExtResource( 7 )

[node name="ColorRect2" type="TextureRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
mouse_filter = 2
texture = SubResource( 6 )
expand = true

[node name="VBoxContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -655.0
margin_right = 155.0
rect_pivot_offset = Vector2( 150, 170 )

[node name="Tween" type="Tween" parent="VBoxContainer"]

[node name="Tween2" type="Tween" parent="VBoxContainer"]

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 310.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 120 )
rect_pivot_offset = Vector2( 155, 60 )
focus_neighbour_top = NodePath("../Button3")
custom_fonts/font = SubResource( 36 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 6 )
text = "PLAY"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 310.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 120 )
rect_pivot_offset = Vector2( 155, 60 )
custom_fonts/font = SubResource( 36 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 6 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 330.0
margin_right = 310.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 120 )
rect_pivot_offset = Vector2( 155, 60 )
focus_neighbour_bottom = NodePath("../Button")
custom_fonts/font = SubResource( 36 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 6 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SocialButt" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -123.0
margin_right = 144.0
margin_bottom = -36.0
custom_constants/separation = 15
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SocialButt"]
margin_right = 288.0
margin_bottom = 64.0
custom_constants/separation = 20
alignment = 1

[node name="socialB" type="TextureButton" parent="SocialButt/HBoxContainer"]
margin_left = 35.0
margin_right = 92.0
margin_bottom = 64.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="socialB2" type="TextureButton" parent="SocialButt/HBoxContainer"]
margin_left = 112.0
margin_right = 176.0
margin_bottom = 64.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )

[node name="socialB3" type="TextureButton" parent="SocialButt/HBoxContainer"]
margin_left = 196.0
margin_right = 253.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="Label" type="Label" parent="SocialButt"]
margin_top = 79.0
margin_right = 288.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 25 )
text = "ROCKET_007"
align = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 255.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="VBoxContainer4"]
margin_right = 220.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 8 )
text = "overal rec:"
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer4"]
margin_top = 94.0
margin_right = 220.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 30 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 23 )
text = "CLICKS: "
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer4"]
margin_top = 129.0
margin_right = 220.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 30 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 23 )
text = "TIME: "
valign = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_top = 74.0
margin_right = 265.0
margin_bottom = 287.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 265, 110 )
custom_colors/font_color_shadow = Color( 0.054902, 0.32549, 0.478431, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 10
custom_fonts/font = SubResource( 32 )
text = "CROSS
BOT"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
anims/RESET = SubResource( 33 )
anims/title_typing = SubResource( 34 )

[connection signal="tween_completed" from="VBoxContainer/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="VBoxContainer/Tween2" to="." method="_on_Tween2_tween_completed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="SocialButt/HBoxContainer/socialB" to="." method="_on_socialB_pressed"]
[connection signal="pressed" from="SocialButt/HBoxContainer/socialB2" to="." method="_on_socialB2_pressed"]
[connection signal="pressed" from="SocialButt/HBoxContainer/socialB3" to="." method="_on_socialB3_pressed"]
